[gd_scene load_steps=5 format=3 uid="uid://b7c77uo4gof8m"]

[ext_resource type="Texture2D" uid="uid://bp6aq48p08u2s" path="res://media/art/pc_screen_background.png" id="1_ivso8"]
[ext_resource type="Script" path="res://scripts/time_attack_results.gd" id="1_pp5ka"]
[ext_resource type="FontFile" uid="uid://da5b5tojlaosn" path="res://media/fonts/dogicapixelbold.ttf" id="2_al1v5"]
[ext_resource type="FontFile" uid="uid://dvea7m88oxmit" path="res://media/fonts/dogicapixel.ttf" id="3_hjplf"]

[node name="TimeAttackResults" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pp5ka")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="background" type="NinePatchRect" parent="MarginContainer"]
modulate = Color(1, 1, 1, 0.764706)
layout_mode = 2
texture = ExtResource("1_ivso8")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="info" type="VBoxContainer" parent="MarginContainer/background/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/background/MarginContainer/info"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0313726, 0.364706, 0.372549, 1)
theme_override_fonts/font = ExtResource("2_al1v5")
theme_override_font_sizes/font_size = 16
text = "Time attack conclu√≠do!"
horizontal_alignment = 1

[node name="spacer" type="Control" parent="MarginContainer/background/MarginContainer/info"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="time" type="HBoxContainer" parent="MarginContainer/background/MarginContainer/info"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/background/MarginContainer/info/time"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0313726, 0.364706, 0.372549, 1)
theme_override_fonts/font = ExtResource("3_hjplf")
theme_override_font_sizes/font_size = 8
text = "Tempo:"

[node name="spacer" type="Control" parent="MarginContainer/background/MarginContainer/info/time"]
layout_mode = 2
size_flags_horizontal = 3

[node name="elapsed_time" type="Label" parent="MarginContainer/background/MarginContainer/info/time"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0313726, 0.364706, 0.372549, 1)
theme_override_fonts/font = ExtResource("2_al1v5")
theme_override_font_sizes/font_size = 8
text = "000:00.000"

[node name="errors" type="HBoxContainer" parent="MarginContainer/background/MarginContainer/info"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/background/MarginContainer/info/errors"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0313726, 0.364706, 0.372549, 1)
theme_override_fonts/font = ExtResource("3_hjplf")
theme_override_font_sizes/font_size = 8
text = "Erros:"

[node name="spacer" type="Control" parent="MarginContainer/background/MarginContainer/info/errors"]
layout_mode = 2
size_flags_horizontal = 3

[node name="error_counter" type="Label" parent="MarginContainer/background/MarginContainer/info/errors"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0313726, 0.364706, 0.372549, 1)
theme_override_fonts/font = ExtResource("2_al1v5")
theme_override_font_sizes/font_size = 8
text = "0"

[node name="penalties" type="HBoxContainer" parent="MarginContainer/background/MarginContainer/info"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/background/MarginContainer/info/penalties"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0313726, 0.364706, 0.372549, 1)
theme_override_fonts/font = ExtResource("3_hjplf")
theme_override_font_sizes/font_size = 8
text = "Penalidades:"

[node name="spacer" type="Control" parent="MarginContainer/background/MarginContainer/info/penalties"]
layout_mode = 2
size_flags_horizontal = 3

[node name="penalty_counter" type="Label" parent="MarginContainer/background/MarginContainer/info/penalties"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0313726, 0.364706, 0.372549, 1)
theme_override_fonts/font = ExtResource("2_al1v5")
theme_override_font_sizes/font_size = 8
text = "+0s"

[node name="final_time" type="HBoxContainer" parent="MarginContainer/background/MarginContainer/info"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/background/MarginContainer/info/final_time"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0313726, 0.364706, 0.372549, 1)
theme_override_fonts/font = ExtResource("2_al1v5")
theme_override_font_sizes/font_size = 8
text = "Tempo final: "

[node name="total_time" type="Label" parent="MarginContainer/background/MarginContainer/info/final_time"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0313726, 0.364706, 0.372549, 1)
theme_override_fonts/font = ExtResource("2_al1v5")
theme_override_font_sizes/font_size = 8
text = "000:00.000"
